--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
 * linguist-vendored	
-*.js linguist-vendored=false	
-secp256k1-opencl/* linguist-vendored
+secp256k1-opencl/* linguist-vendored=false	
