--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 * linguist-vendored	
 secp256k1-opencl/* linguist-vendored=false	
+deprecated/* linguist-vendored=false	
+*.md linguist-vendored=false	
