--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,4 @@
 secp256k1-opencl/* linguist-vendored=false	
 deprecated/* linguist-vendored=false	
 *.md linguist-documentation=false
-*.cl linguist-vendored=false	
+*.cl linguist-language=C
