--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 * linguist-vendored	
-secp256k1-opencl/* linguist-vendored=false	
-deprecated/* linguist-vendored=false	
+secp256k1-opencl/* linguist-vendored	
+deprecated/* linguist-vendored	
 *.md linguist-documentation
 *.cl linguist-language=C
